# ChangeLog for dev-python/metlog-py
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Mar 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  metlog-py-0.10.0.ebuild:
  Substitute EPYTHON with PYTHON in python_test().

*metlog-py-0.10.0 (06 Feb 2013)

  06 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +metlog-py-0.10.0.ebuild, +metadata.xml:
  Initial import. Ebuild by me.
