@@ -4,6 +4,10 @@
 
   15 Mar 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
   metlog-py-0.10.0.ebuild:
+  Remove double parentheses in test? DEPEND.
+
+  15 Mar 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  metlog-py-0.10.0.ebuild:
   Substitute EPYTHON with PYTHON in python_test().
 
 *metlog-py-0.10.0 (06 Feb 2013)
